@@ -1,4 +1,5 @@
   version 2.8.7
+- fixed a (dumb) bug making the addon unusable when freshly installing it
 - updated inventory scanning to per-bag updates to greatly improve performance
 - fixed font spacing
 - added font shadow
